<resources>
    <string name="app_name">fish</string>
    <string name="nav_home">Home</string>
    <string name="nav_message">Message</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_person">Person</string>
    <string name="float_button">添加商品</string>
    <string name="null_str">     </string>

    <!--    loginActivity -->
    <string name="login_welcome">Welcome Back</string>
    <string name="login_welcome2">Sign in to continue</string>
    <string name="login_account_hint">Phone Number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot">Forget Password?</string>
    <string name="login_register_button">If you don`t have an account <b> Register here</b></string>
    <string name="login_login_button">If you have an account <b> Login here</b></string>
    <string name="login_verify">Please enter SMS</string>
    <string name="login_started">Login Started</string>
    <string name="login_failure">Login Failure</string>
    <string name="login_success">Login Success</string>
    <string name="login_no_phone">PhoneNumber can`t be null</string>
    <string name="login_send">send</string>
    <string name="login_register_started">Register Started</string>
    <string name="login_register_failure">Register Failure</string>
    <string name="login_register_success">Register Success</string>
    <string name="login_verify_failure">Send Failure</string>
    <string name="login_verify_success">Send Success</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>

    <!-- homeFragment   -->
    <string name="home_card_title">咸鱼优品</string>
    <string name="home_card_title2">验货包真|全国包邮|品质包退</string>
    <string name="home_card_text_bold_1">潮服潮鞋</string>
    <string name="home_card_text_common_1">正品尖货</string>
    <string name="home_card_text_bold_2">潮玩盲盒</string>
    <string name="home_card_text_common_2">爆款折扣</string>
    <string name="home_card_text_bold_3">精品手机</string>
    <string name="home_card_text_common_3">品质担保</string>
    <string name="home_card_text_bold_4">咸鱼拍</string>
    <string name="home_card_text_common_4">一元起拍</string>
    <string name="home_shop_item_yuan">元</string>

    <!--  appendFragment  -->
    <string name="append_cancel">取消</string>
    <string name="append_title">发布</string>
    <string name="append_send">发布</string>
    <string name="append_picture">添加图片</string>
    <string name="append_address">发货地:</string>
    <string name="append_price">价格</string>
    <string name="append_price_dig">￥0.00</string>
    <string name="append_same">同款宝贝</string>
    <string name="append_same_value">关联同款后,将推荐想买的人</string>
    <string name="append_more_value">商品类型</string>
    <string name="append_save_temp">存草稿</string>
    <string name="append_toast">请将商品信息填写完整</string>
    <string name="append_send_toast_success">商品信息发送成功</string>
    <string name="append_send_toast_failure">商品信息发送失败</string>
    <string name="append_save_toast_success">商品信息暂存成功</string>
    <string name="append_save_toast_failure">商品信息暂存失败</string>
    <string name="append_title_hint">标题</string>
    <string name="append_content_hint">内容</string>
    <string name="append_default_address">吉林省 松原市</string>

    <!-- cartFragment   -->
    <string name="cart_shop_item_yuan">¥</string>
    <string name="cart_shop_item_text">没人想要</string>
    <string name="cart_item_send">发布</string>
    <string name="cart_title">待发布</string>
    <string name="cart_refresh">刷新完成</string>
    <string name="cart_send_success">发送成功</string>
    <string name="cart_send_failure">发送失败</string>
    <string name="cart_delete_success">删除成功</string>
    <string name="cart_delete_failure">删除失败</string>

    <!-- detailActivity   -->
    <string name="detail_item_want">9999 浏览 | 9999人 想要</string>
    <string name="detail_item_title_tip">发布于:</string>
    <string name="detail_add">关注</string>
    <string name="detail_item_leave">留言</string>
    <string name="detail_comment_one_username">好好他爸爸</string>
    <string name="detail_comment_two_username">一盘米饭就够了</string>
    <string name="detail_comment_three_username">为宝宝920</string>
    <string name="detail_comment_one_content">是不是顺丰到付</string>
    <string name="detail_comment_two_content">配备充电器吗</string>
    <string name="detail_comment_three_content">白送吗</string>
    <string name="detail_all_comment">点击查看全部留言</string>
    <string name="detail_item_detail">详情</string>
    <string name="detail_item_recommend">为你推荐</string>
    <string name="detail_same">卖同款</string>
    <string name="detail_buy">我想要</string>
    <string name="detail_same_text">没有这个接口,别卖了…</string>
    <string name="detail_buy_text">这个接口有问题,别买了…</string>


    <!-- message -->
    <string name="message_info">消息</string>
    <string name="message_string_bell_up">通知信息</string>
    <string name="message_string_bell_down">还没有新通知~</string>
    <string name="message_string_thumb_up_up">互动信息</string>
    <string name="message_string_thumb_up_down">还没有互动信息~</string>
    <string name="message_string_offer_up">闲鱼情报社</string>
    <string name="message_string_offer_down">【11条】您感兴趣的erd类商品…</string>
    <string name="message_string_identity_up">买家小助手</string>
    <string name="message_string_identity_down">【4条】换钱、腾空间两不误！</string>
    <string name="message_string_smile_up">会玩精选</string>
    <string name="message_string_smile_down">“小猫咪~”</string>
    <string name="message_string_anchor_up">闲小蜜</string>
    <string name="message_string_anchor_down">新人安心购领取</string>
    <string name="cart_title2">已发布</string>

    <string name="person_title">个人中心</string>
    <string name="person_default">dd</string>


</resources>