<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.fish.ui.auth.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <ImageView
            android:id="@+id/login_imgView_logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_imgView_logo_rays"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:rotation="180"
            android:layout_marginTop="80dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_imgView_cloudLeft"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/cloud"
            android:translationX="-20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/lightGrey" />

        <ImageView
            android:id="@+id/login_imgView_cloudRight"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="120dp"
            android:scaleType="centerInside"
            android:src="@drawable/cloud"
            android:translationX="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/lightGrey" />

        <LinearLayout
            android:alpha="1"
            android:id="@+id/login_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_imgView_cloudRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_welcome"
                android:textColor="@color/textHeadline"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/login_welcome2"
                android:textColor="@color/textDescription"
                android:textSize="14sp" />

            <EditText
                android:text="@={viewModel.phoneNumber}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/login_phone"
                android:drawablePadding="16dp"
                android:hint="@string/login_account_hint"
                android:inputType="phone"
                android:padding="16dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/login_verify"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/login_verify"
                    android:drawablePadding="16dp"
                    android:hint="@string/login_verify"
                    android:inputType="number"
                    android:padding="16dp"
                    android:text="@={viewModel.sms}"
                    android:textSize="14sp" />

                <Button
                    android:onClick="@{viewModel::onLoginButtonVerify}"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:text="@string/login_send"
                    android:textColor="@color/white" />


            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/login_lock"
                android:drawableEnd="@drawable/login_unvisibility"
                android:drawablePadding="16dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/bt_login"
                android:onClick="@{viewModel::onLoginButtonClick}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg"
                android:text="@string/login_button_login"
                android:visibility="visible"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_register"
                android:onClick="@{viewModel::onRegisterButtonClick}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg"
                android:text="@string/login_button_register"
                android:visibility="gone"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:alpha="1"
            android:text="@string/login_forgot"
            android:textColor="@color/textDescription"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_inputs" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_button"
            android:textColor="@color/textHeadline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:shadowColor="@color/main_color"
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="@color/main_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>