<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.fish.ui.append.AppendViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F9FF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/design_bottom_sheet"
            android:background="#F6F6F9FF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/append_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/append_cancel"
                    android:textColor="@color/text_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/append_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/shape_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="上传"
                    android:visibility="gone"
                    android:textColor="@color/text_black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/append_save_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/shape_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{viewModel::save}"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/append_save_temp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/append_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/shape_yellow"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{viewModel::send}"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/append_send"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <EditText
                    android:id="@+id/append_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="text"
                    android:background="@null"
                    android:hint="@string/append_title_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="@={viewModel.title}"
                    android:textColor="@color/text_main"
                    android:textColorHint="@color/lightGrey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/append_content"
                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:autofillHints="text"
                    android:background="@null"
                    android:gravity="start|top"
                    android:hint="@string/append_content_hint"
                    android:inputType="text"
                    android:padding="10dp"
                    android:text="@={viewModel.content}"
                    android:textColor="@color/text_main"
                    android:textColorHint="@color/lightGrey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_white"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/append_pictures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:spanCount="3"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

                    <ImageView
                        android:id="@+id/append_picture_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:padding="10dp"
                        android:text="@string/append_picture"
                        android:background="@drawable/append_add" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/append_address"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="13sp"
                        android:hint="@string/append_address" />

                    <EditText
                        android:layout_marginStart="5dp"
                        android:gravity="start"
                        android:id="@+id/append_add_address"
                        android:background="@null"
                        android:textColor="@color/text_main"
                        android:textColorHint="@color/lightGrey"
                        android:paddingTop="5dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:hint="@string/append_default_address"
                        android:text="@={viewModel.address}"
                        android:autofillHints="吉林省 松原市"
                        android:inputType="text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_white"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/append_money" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:padding="5dp"
                        android:text="@string/append_price"
                        android:textColor="@color/text_main"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_white"
                        android:gravity="end|center_vertical"
                        android:hint="@string/append_price_dig"
                        android:inputType="number"
                        android:padding="5dp"
                        android:text="@={viewModel.price}"
                        android:textColor="@color/colo_money"
                        android:textSize="16sp"
                        app:drawableEndCompat="@drawable/append_money" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_link" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/append_same" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:padding="5dp"
                        android:text="@string/append_same"
                        android:textColor="@color/text_main"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center_vertical"
                        android:padding="5dp"
                        android:text="@string/append_same_value"
                        android:textColor="@color/text_main1"
                        android:textSize="16sp"
                        android:maxLines="1"
                        app:drawableEndCompat="@drawable/append_right" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/color_link" />

                <LinearLayout
                    android:id="@+id/append_type_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/append_more" />

                    <TextView
                        android:id="@+id/append_type_exhibit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/append_more_value"
                        android:textColor="@color/text_main"
                        android:textSize="16sp"
                        app:drawableEndCompat="@drawable/append_right" />

                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/append_recycler"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                app:spanCount="4"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
