<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="good"
            type="com.example.fish.logic.network.model.SaveListRecord" />

        <variable
            name="viewModel"
            type="com.example.fish.ui.cart.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingVertical="5dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cart_item_card"
            android:layout_width="343dp"
            android:layout_height="140dp"
            android:clickable="true"
            android:elevation="20dp"
            android:focusable="true"
            app:cardCornerRadius="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/cart_item_image"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:shadowRadius="8"
                android:src="@color/main_color" />

            <TextView
                android:id="@+id/cart_item_title"
                android:layout_width="143dp"
                android:layout_height="23dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@={good.content}"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/shop_item_price"
                android:layout_width="30dp"
                android:layout_height="21dp"
                android:layout_marginStart="156dp"
                android:layout_marginTop="60dp"
                android:gravity="start"
                android:text="@={good.price}"
                android:textColor="@color/colo_red"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text = "88" />

            <TextView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="65dp"
                android:text="@string/cart_shop_item_yuan"
                android:textColor="@color/colo_red"
                android:textSize="13sp"
                android:textStyle="bold"
                android:gravity="end"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="206dp"
                android:layout_marginTop="65dp"
                android:text="@string/cart_shop_item_text"
                android:textColor="@color/lightGrey"
                android:textSize="13sp"
                android:textStyle="bold"
                android:gravity="end"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cart_item_avatar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="145dp"
                android:layout_marginTop="96dp"
                app:civ_border_color="@color/main_color"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/main_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="175dp"
                android:layout_marginTop="106dp"
                android:gravity="start"
                android:text="@={good.username}"
                android:textColor="@color/lightGrey"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cart_item_send"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginStart="270dp"
                android:layout_marginTop="96dp"
                android:textColor="@color/white"
                android:focusable="true"
                android:background="@drawable/shape_yellow"
                android:text="@string/cart_item_send"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>